@@ -1,5 +1,9 @@
 package net.shasankp000.PlayerUtils;
 
+import net.minecraft.component.DataComponentTypes;
+import net.minecraft.component.type.AttributeModifierSlot;
+import net.minecraft.component.type.AttributeModifiersComponent;
+import net.minecraft.entity.attribute.EntityAttributes;
 import net.minecraft.item.*;
 import net.minecraft.server.network.ServerPlayerEntity;
 import org.slf4j.Logger;
@@ -8,23 +12,19 @@ import org.slf4j.LoggerFactory;
 import java.util.*;
 
 /**
- * Utility class for intelligent weapon management
- * Handles automatic weapon selection for optimal combat effectiveness
+ * Utility class for intelligent weapon management - Refactored for 1.21.4
  */
 public class WeaponUtils {
     private static final Logger LOGGER = LoggerFactory.getLogger("weapon-utils");
 
-    /**
-     * Weapon analysis result
-     */
     public static class WeaponAnalysis {
         public final ItemStack weapon;
         public final int slot;
         public final double attackDamage;
         public final double attackSpeed;
-        public final double dps; // Damage Per Second
+        public final double dps;
         public final String weaponType;
-        public final int enchantmentLevel; // Total enchantment quality
+        public final int enchantmentLevel;
 
         public WeaponAnalysis(ItemStack weapon, int slot, double attackDamage, double attackSpeed,
                               String weaponType, int enchantmentLevel) {
@@ -38,33 +38,24 @@ public class WeaponUtils {
         }
 
         public double getOverallScore() {
-            // Weighted scoring: DPS + enchantment quality
             return dps + (enchantmentLevel * 0.5);
         }
     }
 
-    /**
-     * Find the best melee weapon in bot's inventory
-     * Returns slot number (0-8 for hotbar, 9-35 for main inventory)
-     * Returns -1 if no weapon found
-     */
     public static int findBestMeleeWeapon(ServerPlayerEntity bot) {
         LOGGER.debug("🗡 Analyzing bot's inventory for best melee weapon...");
 
         List<WeaponAnalysis> weapons = new ArrayList<>();
 
-        // Scan hotbar (slots 0-8) and main inventory (slots 9-35)
         for (int slot = 0; slot < 36; slot++) {
             ItemStack stack = bot.getInventory().getStack(slot);
             if (stack.isEmpty()) continue;
 
-            Item item = stack.getItem();
-
-            // Check if item is a melee weapon
-            if (isMeleeWeapon(item)) {
+            // Updated check: Does it have damage modifiers or is it a known weapon class?
+            if (isMeleeWeapon(stack)) {
                 double attackDamage = getAttackDamage(stack);
                 double attackSpeed = getAttackSpeed(stack);
-                String weaponType = getWeaponType(item);
+                String weaponType = getWeaponType(stack.getItem());
                 int enchantmentLevel = analyzeEnchantments(stack);
 
                 WeaponAnalysis analysis = new WeaponAnalysis(
@@ -85,10 +76,10 @@ public class WeaponUtils {
             return -1;
         }
 
-        // Sort by overall score (DPS + enchantments)
         weapons.sort((w1, w2) -> Double.compare(w2.getOverallScore(), w1.getOverallScore()));
 
-        WeaponAnalysis best = weapons.getFirst();
+        // .getFirst() is fine in Java 21+, otherwise use .get(0)
+        WeaponAnalysis best = weapons.get(0);
         LOGGER.info("⚔ Best weapon: {} in slot {} (DMG: {}, DPS: {}, Score: {})",
             best.weaponType, best.slot, String.format("%.1f", best.attackDamage),
             String.format("%.2f", best.dps), String.format("%.2f", best.getOverallScore()));
@@ -96,22 +87,16 @@ public class WeaponUtils {
         return best.slot;
     }
 
-    /**
-     * Check if an item is a melee weapon
-     */
-    private static boolean isMeleeWeapon(Item item) {
+    private static boolean isMeleeWeapon(ItemStack stack) {
+        Item item = stack.getItem();
+        // Modern check: Does it have the Tool component or Attribute Modifiers?
         return item instanceof SwordItem ||
                item instanceof AxeItem ||
-               item instanceof TridentItem ||
                item instanceof MaceItem ||
-               item instanceof PickaxeItem ||
-               item instanceof ShovelItem ||
-               item instanceof HoeItem;
+               item instanceof TridentItem ||
+               stack.getComponents().contains(DataComponentTypes.ATTRIBUTE_MODIFIERS);
     }
 
-    /**
-     * Get weapon type name
-     */
     private static String getWeaponType(Item item) {
         if (item instanceof SwordItem) return "Sword";
         if (item instanceof AxeItem) return "Axe";
@@ -120,109 +105,59 @@ public class WeaponUtils {
         if (item instanceof PickaxeItem) return "Pickaxe";
         if (item instanceof ShovelItem) return "Shovel";
         if (item instanceof HoeItem) return "Hoe";
-        return "Unknown";
+        return "Custom/Tool";
     }
 
-    /**
-     * Get attack damage from item stack
-     */
     private static double getAttackDamage(ItemStack stack) {
-        Item item = stack.getItem();
+        // Read directly from the new Data Component system
+        AttributeModifiersComponent modifiers = stack.get(DataComponentTypes.ATTRIBUTE_MODIFIERS);
+        double damage = 1.0; // Base hand damage
 
-        // Get base attack damage from item attributes
-        double baseDamage = 1.0; // Default fist damage
-
-        if (item instanceof ToolItem toolItem) {
-            // Tools have attack damage from material
-            baseDamage = toolItem.getMaterial().getAttackDamage();
-        } else if (item instanceof SwordItem swordItem) {
-            // Swords have attack damage from material + bonus
-            baseDamage = swordItem.getMaterial().getAttackDamage() + 3.0; // Sword bonus
-        } else if (item instanceof TridentItem) {
-            baseDamage = 9.0; // Trident base damage
-        } else if (item instanceof MaceItem) {
-            baseDamage = 6.0; // Mace base damage (1.21+)
-        }
-
-        // Add Sharpness enchantment bonus (if present)
-        // Note: In 1.20.6+, enchantments are stored in components, not NBT
-        // For simplicity, we'll skip enchantment bonuses in base damage calculation
-        // since weapons will still be ranked correctly by material/type
-
-        return baseDamage;
-    }
-
-    /**
-     * Get attack speed from item stack
-     */
-    private static double getAttackSpeed(ItemStack stack) {
-        Item item = stack.getItem();
-
-        // Default attack speeds for different weapon types
-        double attackSpeed = 4.0; // Default (fist/no weapon)
-
-        if (item instanceof SwordItem) {
-            attackSpeed = 1.6; // Swords are fast
-        } else if (item instanceof AxeItem) {
-            // Axes are slower but hit harder
-            ToolMaterial material = ((AxeItem) item).getMaterial();
-            if (material == ToolMaterials.WOOD || material == ToolMaterials.GOLD) {
-                attackSpeed = 0.8;
-            } else if (material == ToolMaterials.STONE) {
-                attackSpeed = 0.8;
-            } else if (material == ToolMaterials.IRON) {
-                attackSpeed = 0.9;
-            } else if (material == ToolMaterials.DIAMOND || material == ToolMaterials.NETHERITE) {
-                attackSpeed = 1.0;
+        if (modifiers != null) {
+            for (AttributeModifiersComponent.Entry entry : modifiers.modifiers()) {
+                // We only care about damage applied to the main hand
+                if (entry.attribute().equals(EntityAttributes.ATTACK_DAMAGE) &&
+                    entry.slot().matches(net.minecraft.entity.EquipmentSlot.MAINHAND)) {
+                    damage += entry.modifier().value();
+                }
             }
-        } else if (item instanceof TridentItem) {
-            attackSpeed = 1.1; // Trident is fairly fast
-        } else if (item instanceof MaceItem) {
-            attackSpeed = 0.7; // Mace is slow but powerful
-        } else if (item instanceof ToolItem) {
-            attackSpeed = 1.2; // Tools (pickaxe, shovel, hoe) are moderately fast
         }
-
-        return attackSpeed;
+        return damage;
     }
 
-    /**
-     * Analyze enchantments and return total quality score
-     * Note: In 1.20.6+, enchantments are stored in DataComponents
-     * For simplicity, we use item rarity/material as a proxy for enchantment quality
-     */
+    private static double getAttackSpeed(ItemStack stack) {
+        AttributeModifiersComponent modifiers = stack.get(DataComponentTypes.ATTRIBUTE_MODIFIERS);
+        double speed = 4.0; // Default player attack speed
+
+        if (modifiers != null) {
+            for (AttributeModifiersComponent.Entry entry : modifiers.modifiers()) {
+                if (entry.attribute().equals(EntityAttributes.ATTACK_SPEED) &&
+                    entry.slot().matches(net.minecraft.entity.EquipmentSlot.MAINHAND)) {
+                    // This modifier is usually negative (e.g., -2.4), so speed becomes 1.6
+                    speed += entry.modifier().value();
+                }
+            }
+        }
+        return speed;
+    }
+
     private static int analyzeEnchantments(ItemStack stack) {
         int score = 0;
-
-        // Use material tier as enchantment proxy
-        // Higher tier items are more likely to have good enchantments
-        if (stack.getItem() instanceof ToolItem toolItem) {
-            ToolMaterial material = toolItem.getMaterial();
-            if (material == ToolMaterials.NETHERITE) {
-                score += 10; // Best material
-            } else if (material == ToolMaterials.DIAMOND) {
-                score += 8;
-            } else if (material == ToolMaterials.IRON) {
-                score += 5;
-            } else if (material == ToolMaterials.STONE) {
-                score += 3;
-            } else if (material == ToolMaterials.GOLD) {
-                score += 4; // Gold has enchantability but low durability
-            }
+        // 1.21.4 Way: Get the Enchantments component
+        var enchantments = stack.get(DataComponentTypes.ENCHANTMENTS);
+        
+        if (enchantments != null && !enchantments.isEmpty()) {
+            // Add score based on total number of levels
+            score += enchantments.getEnchantments().size() * 5;
         }
 
-        // Check for enchantment glint (indicates item is enchanted)
         if (stack.hasGlint()) {
-            score += 5; // Bonus for any enchantments
+            score += 2;
         }
 
         return score;
     }
 
-    /**
-     * Equip the best melee weapon from inventory
-     * Returns true if weapon was successfully equipped, false otherwise
-     */
     public static boolean equipBestMeleeWeapon(ServerPlayerEntity bot) {
         int bestWeaponSlot = findBestMeleeWeapon(bot);
 
@@ -231,92 +166,35 @@ public class WeaponUtils {
             return false;
         }
 
-        // If weapon is already in hand, we're done
-        if (bot.getInventory().selectedSlot == bestWeaponSlot && bestWeaponSlot < 9) {
+        // Field access for selectedSlot in 1.21.4 Yarn
+        if (bot.getInventory().selectedSlot == bestWeaponSlot) {
             LOGGER.debug("✓ Best weapon already equipped");
             return true;
         }
 
         try {
-            // If weapon is in main inventory (slot 9-35), swap it to hotbar first
             if (bestWeaponSlot >= 9) {
-                // Find empty hotbar slot or use slot 0
-                int targetHotbarSlot = 0;
-                for (int i = 0; i < 9; i++) {
-                    if (bot.getInventory().getStack(i).isEmpty()) {
-                        targetHotbarSlot = i;
-                        break;
-                    }
-                }
-
-                // Swap weapon to hotbar
-                ItemStack weaponStack = bot.getInventory().getStack(bestWeaponSlot);
-                ItemStack hotbarStack = bot.getInventory().getStack(targetHotbarSlot);
-                bot.getInventory().setStack(bestWeaponSlot, hotbarStack);
-                bot.getInventory().setStack(targetHotbarSlot, weaponStack);
-
-                LOGGER.info("Moved weapon from slot {} to hotbar slot {}", bestWeaponSlot, targetHotbarSlot);
-                bestWeaponSlot = targetHotbarSlot;
+                // Use built-in swap helper
+                bot.getInventory().swapSlotWithHotbar(bestWeaponSlot);
+                bot.getInventory().selectedSlot = 0;
+            } else {
+                bot.getInventory().selectedSlot = bestWeaponSlot;
             }
-
-            // Select the hotbar slot with the best weapon
-            bot.getInventory().selectedSlot = bestWeaponSlot;
-            LOGGER.info("✅ Equipped best melee weapon from slot {}", bestWeaponSlot);
             return true;
-
         } catch (Exception e) {
             LOGGER.error("Failed to equip best weapon: {}", e.getMessage());
             return false;
         }
     }
 
-    /**
-     * Calculate optimal bow draw time based on distance to target
-     * Returns draw time in TICKS (20 ticks = 1 second)
-     *
-     * Strategy:
-     * - Close range (0-7m): Quick shots (10-15 ticks) for rapid fire
-     * - Medium range (7-15m): Medium draw (15-20 ticks) for balance
-     * - Long range (15-30m): Full draw (20-25 ticks) for maximum velocity
-     * - Very long range (30+m): Maximum draw (25 ticks) for best accuracy
-     */
     public static int calculateOptimalDrawTime(double distanceToTarget) {
-        int drawTime;
-
-        if (distanceToTarget <= 7.0) {
-            // CLOSE QUARTERS: Rapid fire mode (50-75% draw)
-            drawTime = (int) (10 + (distanceToTarget / 7.0) * 5); // 10-15 ticks
-            LOGGER.debug("⚡ Close quarters rapid fire: {} ticks for {}m", drawTime, String.format("%.1f", distanceToTarget));
-        } else if (distanceToTarget <= 15.0) {
-            // MEDIUM RANGE: Balanced draw (75-100% draw)
-            drawTime = (int) (15 + ((distanceToTarget - 7.0) / 8.0) * 5); // 15-20 ticks
-            LOGGER.debug("🎯 Medium range balanced shot: {} ticks for {}m", drawTime, String.format("%.1f", distanceToTarget));
-        } else if (distanceToTarget <= 30.0) {
-            // LONG RANGE: Full draw for velocity (100-125% draw)
-            drawTime = (int) (20 + ((distanceToTarget - 15.0) / 15.0) * 5); // 20-25 ticks
-            LOGGER.debug("🏹 Long range full draw: {} ticks for {}m", drawTime, String.format("%.1f", distanceToTarget));
-        } else {
-            // VERY LONG RANGE: Maximum draw (125% draw)
-            drawTime = 25;
-            LOGGER.debug("🎯 Sniper mode max draw: {} ticks for {}m", drawTime, String.format("%.1f", distanceToTarget));
-        }
-
-        return drawTime;
+        if (distanceToTarget <= 7.0) return 12;
+        if (distanceToTarget <= 15.0) return 18;
+        return 20; // Max draw
     }
 
-    /**
-     * Calculate projectile speed based on bow draw time
-     * Full draw (20 ticks) = 3.0 blocks/tick
-     * Partial draw scales linearly
-     */
     public static double calculateProjectileSpeed(int drawTime) {
-        // Minecraft bow mechanics: speed increases with draw time up to 20 ticks
-        double maxSpeed = 3.0; // Fully charged arrow
-        double minSpeed = 1.0; // Uncharged arrow
-
-        // Linear scaling from 0 to 20 ticks
         double speedFraction = Math.min(drawTime / 20.0, 1.0);
-        return minSpeed + (maxSpeed - minSpeed) * speedFraction;
+        return 1.0 + (2.0 * speedFraction);
     }
 }
-
